<package>
  <name>asr_relation_graph_generator</name>
  <version>1.0.0</version>
  <description>Relation graph generator package.</description>
  <author>Meißner Pascal</author>
  <maintainer email="asr-ros@lists.kit.edu">Meißner Pascal</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>asr_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>asr_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>
  
</package>


